World Editor Mapping node does not update if one of viewports is in Look Dev Mode #67741

Closed
opened 2019-07-26 15:55:13 +02:00 by Julio Cargnin Pereira · 6 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-24 14:22, hash: 507ffee6e1
Worked: (optional)

Short description of error
World Editor Mapping Node does not update rendered view if another viewport is set to Look Dev Mode.

Exact steps for others to reproduce the error
When I rotate a HDRi image using Mapping Node, Blender does not update Rendered View Mode if another viewport is set to Look Dev Mode (EEVEE).
2019-07-26 22-44-32.mkv

I've tried older versions of Blender and the is happens the same.

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-24 14:22, hash: `507ffee6e1` Worked: (optional) **Short description of error** World Editor Mapping Node does not update rendered view if another viewport is set to Look Dev Mode. **Exact steps for others to reproduce the error** When I rotate a HDRi image using Mapping Node, Blender does not update Rendered View Mode if another viewport is set to Look Dev Mode (EEVEE). [2019-07-26 22-44-32.mkv](https://archive.blender.org/developer/F7629884/2019-07-26_22-44-32.mkv) I've tried older versions of Blender and the is happens the same.

Added subscriber: @CosmoMidias

Added subscriber: @CosmoMidias

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Clément Foucault was assigned by Germano Cavalcante 2019-07-26 19:54:32 +02:00

I can confirm.
Here is a simple file showing the problem:
tmp.blend

I can confirm. Here is a simple file showing the problem: [tmp.blend](https://archive.blender.org/developer/F7630159/tmp.blend)
Clément Foucault was unassigned by Dalai Felinto 2019-12-23 16:33:31 +01:00

Added subscriber: @fclem

Added subscriber: @fclem

This issue was referenced by eace5903cb

This issue was referenced by eace5903cb7d6c77207ad31453aee8e8d151f8b1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-06-24 22:12:23 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67741
No description provided.