Fix T67741 EEVEE: World update don't update lightcache if one viewport uses lookdev

Just a matter of not clearing the updating flag in this case.